[gd_scene format=3 uid="uid://dt0ngqiwc0150"]

[ext_resource type="Script" uid="uid://clrvn115vyp7s" path="res://addons/godot_3d_cursor/scripts/settings_dock/settings_dock.gd" id="1_fr25p"]
[ext_resource type="Script" uid="uid://3gxixdbp5muq" path="res://addons/godot_3d_cursor/scripts/settings_dock/drag_and_drop_line_edit.gd" id="2_tussh"]
[ext_resource type="Script" uid="uid://dva2usm5j2sgf" path="res://addons/godot_3d_cursor/scripts/settings_dock/move_active_cursor_button.gd" id="3_tussh"]
[ext_resource type="Script" uid="uid://dyn712dfnrqm0" path="res://addons/godot_3d_cursor/scripts/settings_dock/move_action_coordinates.gd" id="4_6ifjp"]
[ext_resource type="PackedScene" uid="uid://dl45jxaskf0e6" path="res://addons/godot_3d_cursor/scenes/info_dialog.tscn" id="5_haihr"]

[sub_resource type="SystemFont" id="SystemFont_6ifjp"]
subpixel_positioning = 0

[node name="SettingsDock" type="Control" unique_id=675149705]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fr25p")

[node name="ScrollContainer" type="ScrollContainer" parent="." unique_id=804948264]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer" unique_id=117692796]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer" unique_id=1483452178]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="3DCursorSettingsHBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1798882178]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/3DCursorSettingsHBox" unique_id=2116212849]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "3D Cursor Settings"

[node name="InfoButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/3DCursorSettingsHBox" unique_id=1778912982]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_6ifjp")
theme_override_font_sizes/font_size = 10
text = "info"

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1140897156]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="Scale" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=2056355132]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Scale" unique_id=1107111414]
layout_mode = 2
size_flags_horizontal = 3
text = "Scale"
horizontal_alignment = 2

[node name="ScaleSpinBox" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer/Scale" unique_id=2001993301]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
step = 0.1
value = 1.0

[node name="ScaleAffectLabels" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1710460476]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ScaleAffectLabels" unique_id=122204641]
layout_mode = 2
size_flags_horizontal = 3
text = "Scale affect Label"
horizontal_alignment = 2

[node name="ScaleAffectLabelsCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/ScaleAffectLabels" unique_id=764680007]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "On"

[node name="ShowTitleLabel" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=637316915]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ShowTitleLabel" unique_id=1369494277]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Title Label"
horizontal_alignment = 2

[node name="ShowTitleLabelCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/ShowTitleLabel" unique_id=883198919]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "On"

[node name="ShowNumberLabel" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=269876830]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ShowNumberLabel" unique_id=1802207012]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Number Label"
horizontal_alignment = 2

[node name="ShowNumberLabelCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/ShowNumberLabel" unique_id=488934531]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "On"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=356842838]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ActiveCursorLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=303402345]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Active Cursor"

[node name="RaycastMode" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=2127457863]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/RaycastMode" unique_id=1155030422]
layout_mode = 2
size_flags_horizontal = 3
text = "Raycast Mode"
horizontal_alignment = 2

[node name="RaycastModeOptionButton" type="OptionButton" parent="ScrollContainer/MarginContainer/VBoxContainer/RaycastMode" unique_id=1843776513]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 1
item_count = 4
popup/item_0/text = "Godot 4.5+"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Physicsless"
popup/item_1/id = 1
popup/item_2/text = "Godot 4.2+"
popup/item_2/id = 2
popup/item_2/separator = true
popup/item_3/text = "Physics (Legacy)"
popup/item_3/id = 3

[node name="ActiveCursor" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=96915761]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor" unique_id=616726919]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Active Cursor"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor" unique_id=1370460484]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActiveCursorLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor/VBoxContainer" unique_id=1912797510]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Drag Node here"
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
script = ExtResource("2_tussh")
metadata/_custom_type_script = "uid://3gxixdbp5muq"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor/VBoxContainer" unique_id=595534602]
layout_mode = 2
alignment = 2

[node name="DeselectCursorButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor/VBoxContainer/HBoxContainer" unique_id=537194450]
unique_name_in_owner = true
layout_mode = 2
text = "Deselect"

[node name="ClearButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor/VBoxContainer/HBoxContainer" unique_id=884664946]
layout_mode = 2
text = "Clear"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=546429837]
layout_mode = 2

[node name="GeneralSettingsLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1759202440]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "General Settings"

[node name="AutoRecoverCursor" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1670841405]
layout_mode = 2
tooltip_text = "Automatically recovers the newest 3D Cursor within a scene if no active cursor is set. Create a new 3D Cursor with Shift + Ctrl + Right Click"

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/AutoRecoverCursor" unique_id=1620488776]
layout_mode = 2
size_flags_horizontal = 10
text = "Auto Recover Cursor"
horizontal_alignment = 2

[node name="AutoRecoverCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/AutoRecoverCursor" unique_id=2106330435]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "On"

[node name="NormalColorHBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1790572127]
layout_mode = 2
tooltip_text = "The color of the ID label of a 3D Cursor"

[node name="NormalColorLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/NormalColorHBox" unique_id=1043535878]
layout_mode = 2
size_flags_horizontal = 3
text = "Normal Color"
horizontal_alignment = 2

[node name="NormalColorPickerButton" type="ColorPickerButton" parent="ScrollContainer/MarginContainer/VBoxContainer/NormalColorHBox" unique_id=1095822511]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The color of the ID label of a 3D Cursor"
color = Color(0.8509804, 0.70980394, 0, 1)

[node name="ResetNormalColorButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/NormalColorHBox" unique_id=992531270]
layout_mode = 2
tooltip_text = "Resets the normal color the default"
text = "Reset"

[node name="ActiveColorHBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=639015404]
layout_mode = 2
tooltip_text = "The color of the ID label of the active 3D Cursor"

[node name="ActiveColorLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveColorHBox" unique_id=1323607169]
layout_mode = 2
size_flags_horizontal = 3
text = "Active Color"
horizontal_alignment = 2

[node name="ActiveColorPickerButton" type="ColorPickerButton" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveColorHBox" unique_id=1320019183]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The color of the ID label of the active 3D Cursor"
color = Color(1, 0.54901963, 0, 1)

[node name="ResetActiveColorButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActiveColorHBox" unique_id=1916412246]
layout_mode = 2
tooltip_text = "Resets the normal color the default"
text = "Reset"

[node name="SelectedColorHBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=771861382]
layout_mode = 2
tooltip_text = "The color of the ID label of any selected 3D Cursor"

[node name="SelectedColorLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/SelectedColorHBox" unique_id=1879779582]
layout_mode = 2
size_flags_horizontal = 3
text = "Selected Color"
horizontal_alignment = 2

[node name="SelectedColorPickerButton" type="ColorPickerButton" parent="ScrollContainer/MarginContainer/VBoxContainer/SelectedColorHBox" unique_id=124748059]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The color of the ID label of any selected 3D Cursor"
color = Color(0, 0.9490196, 1, 1)

[node name="ResetSelectedColorButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/SelectedColorHBox" unique_id=1154436771]
layout_mode = 2
tooltip_text = "Resets the normal color the default"
text = "Reset"

[node name="HSeparator5" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1616127660]
layout_mode = 2

[node name="ExtensionsLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1766639675]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Extensions"

[node name="UseTerrain3D" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=102963036]
layout_mode = 2

[node name="UseTerrain3DLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/UseTerrain3D" unique_id=459416174]
layout_mode = 2
size_flags_horizontal = 3
text = "Use Terrain3D"
horizontal_alignment = 2

[node name="UseTerrain3DCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/UseTerrain3D" unique_id=431503882]
layout_mode = 2
size_flags_horizontal = 3
text = "On"

[node name="AddRemoveTerrain3DGroup" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1840974945]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AddTerrain3DGroupButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/AddRemoveTerrain3DGroup" unique_id=1984361611]
layout_mode = 2
size_flags_horizontal = 3
text = "Add 'Terrain3D' Group
to Instances"

[node name="RemoveTerrain3DGroupButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/AddRemoveTerrain3DGroup" unique_id=1464154186]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove 'Terrain3D' Group
from Instances"

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=562764775]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1726534999]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Actions"

[node name="ActionButtons" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer" unique_id=1277408248]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="CursorToOriginButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=987909904]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "3D Cursor to Origin"

[node name="SelectedObjectToCursorButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=1274919911]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Selected Object to 3D Cursor"

[node name="CursorToSelectedObjectsButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=1301335634]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "3D Cursor to Selected Object(s)"

[node name="ToggleCursorButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=1664669269]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Disable 3D Cursor"

[node name="RemoveActiveCursorFromSceneButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=2080231157]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Remove Active 3D Cursor from Scene"

[node name="MoveActiveCursorButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=1666109386]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Move Active 3D Cursor to ..."
script = ExtResource("3_tussh")

[node name="RemoveAllCursorsFromSceneButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=1624657354]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Remove All 3D Cursors From Scene"

[node name="MoveActionCoordinates" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=648108340]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("4_6ifjp")

[node name="XLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActionCoordinates" unique_id=497218745]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "X:"
horizontal_alignment = 2

[node name="XLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActionCoordinates" unique_id=925793070]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="LabeYl" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActionCoordinates" unique_id=1798688977]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Y:"
horizontal_alignment = 2

[node name="YLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActionCoordinates" unique_id=1184191874]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="ZLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActionCoordinates" unique_id=1368573153]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Z:"
horizontal_alignment = 2

[node name="ZLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActionCoordinates" unique_id=1363361537]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="GridSpacer" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=1137036502]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CreatePath3DFromCursors" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons" unique_id=18016790]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Create Path3D From Cursors"

[node name="InfoDialog" parent="." unique_id=1383489719 instance=ExtResource("5_haihr")]

[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/3DCursorSettingsHBox/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/Scale/ScaleSpinBox" to="." method="_on_scale_spin_box_value_changed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/ScaleAffectLabels/ScaleAffectLabelsCheckBox" to="." method="_on_scale_affect_labels_check_box_toggled"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/ShowTitleLabel/ShowTitleLabelCheckBox" to="." method="_on_show_title_label_check_box_toggled"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/ShowNumberLabel/ShowNumberLabelCheckBox" to="." method="_on_show_number_label_check_box_toggled"]
[connection signal="item_selected" from="ScrollContainer/MarginContainer/VBoxContainer/RaycastMode/RaycastModeOptionButton" to="." method="_on_raycast_mode_option_button_item_selected"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor/VBoxContainer/HBoxContainer/DeselectCursorButton" to="." method="_on_deselect_cursor_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActiveCursor/VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="color_changed" from="ScrollContainer/MarginContainer/VBoxContainer/NormalColorHBox/NormalColorPickerButton" to="." method="_on_normal_color_picker_button_color_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/NormalColorHBox/ResetNormalColorButton" to="." method="_on_reset_normal_color_button_pressed"]
[connection signal="color_changed" from="ScrollContainer/MarginContainer/VBoxContainer/ActiveColorHBox/ActiveColorPickerButton" to="." method="_on_active_color_picker_button_color_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActiveColorHBox/ResetActiveColorButton" to="." method="_on_reset_active_color_button_pressed"]
[connection signal="color_changed" from="ScrollContainer/MarginContainer/VBoxContainer/SelectedColorHBox/SelectedColorPickerButton" to="." method="_on_selected_color_picker_button_color_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/SelectedColorHBox/ResetSelectedColorButton" to="." method="_on_reset_selected_color_button_pressed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/UseTerrain3D/UseTerrain3DCheckBox" to="." method="_on_use_terrain_3d_check_box_toggled"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/AddRemoveTerrain3DGroup/AddTerrain3DGroupButton" to="." method="_on_add_terrain_3d_group_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/AddRemoveTerrain3DGroup/RemoveTerrain3DGroupButton" to="." method="_on_remove_terrain_3d_group_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/CursorToOriginButton" to="." method="_on_cursor_to_origin_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/SelectedObjectToCursorButton" to="." method="_on_selected_object_to_cursor_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/CursorToSelectedObjectsButton" to="." method="_on_cursor_to_selected_objects_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/ToggleCursorButton" to="." method="_on_toggle_cursor_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/RemoveActiveCursorFromSceneButton" to="." method="_on_remove_active_cursor_from_scene_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActiveCursorButton" to="." method="_on_move_active_cursor_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/RemoveAllCursorsFromSceneButton" to="." method="_on_remove_all_cursors_from_scene_button_pressed"]
[connection signal="visibility_changed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/MoveActionCoordinates" to="." method="_on_move_action_coordinates_visibility_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/ActionButtons/CreatePath3DFromCursors" to="." method="_on_create_path_3d_from_cursors_button_pressed"]
